# applied-ml-projects

./: .gitignore  README.md  pyproject.toml
Forecasting/src/: 01_linear_regression.ipynb
archive/: 26_week_forecast.ipynb  forecasting_sales.ipynb
classification/src/: 01_logistic_regression.ipynb
forecasting/data/: takehome_data.csv
forecasting/src/: 01_linear_regression.ipynb  02_ridge_and_lass_regression.ipynb
python_practice/: oop.ipynb
recommendation_engine/: README_Salon_Engine.md
recommendation_engine/data/: synthetic_salon_dataset.csv
recommendation_engine/src/: 01_salon_recommendation_engine.ipynb  02_beauty_recommender_two_stage.ipynb  salon_recommendation_engine.ipynb
