[tool.poetry]
name = "ml-projects-portfolio"
version = "0.1.0"
description = "A portfolio of machine learning and data science projects by Michael Caswell"
authors = ["Michael Caswell <youremail@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"

# Core
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.19.0"

# NLP / Transformers (optional for RAG or classification work)
transformers = "^4.40.0"
torch = "^2.3.0"

# Time Series (if needed for forecasting projects)
statsmodels = "^0.14.0"
prophet = "^1.1.5"

# API / Frontend
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.35.0"

# Experimentation / Jupyter
jupyter = "^1.0.0"
notebook = "^7.1.0"
ipykernel = "^6.29.0"

# Utility
tqdm = "^4.66.0"
joblib = "^1.4.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
pmdarima = "^2.0.4"
xgboost = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
